feat(payment): implemented paypal to insure smooth payment flow

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/node": "^22.10.7",
     "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
+    "@types/paypal__checkout-server-sdk": "^1.0.8",
     "@types/supertest": "^6.0.2",
     "date-fns": "^4.1.0",
     "eslint": "^9.18.0",
