--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.832.0",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.18.0",
     "@google-cloud/translate": "^9.1.0",
+    "@nestjs/cli": "^11.0.0",
     "@nestjs/common": "^11.1.3",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.3",
@@ -30,28 +33,11 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.1.3",
+    "@nestjs/schematics": "^11.0.0",
+    "@nestjs/testing": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.3",
     "@paypal/checkout-server-sdk": "^1.0.3",
-    "bcrypt": "^6.0.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.1",
-    "multer-s3": "^3.0.1",
-    "nodemailer": "^7.0.3",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "pg": "^8.16.1",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "socket.io": "^4.8.1",
-    "stripe": "^18.2.1",
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.18.0",
-    "@nestjs/cli": "^11.0.0",
-    "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/bcrypt": "^5.0.2",
@@ -65,14 +51,29 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/paypal__checkout-server-sdk": "^1.0.8",
     "@types/supertest": "^6.0.2",
+    "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
+    "geoip-lite": "^1.4.10",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
+    "multer-s3": "^3.0.1",
+    "nodemailer": "^7.0.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "pg": "^8.16.1",
     "prettier": "^3.4.2",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "source-map-support": "^0.5.21",
+    "stripe": "^18.2.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
@@ -81,5 +82,8 @@
     "typeorm": "^0.3.25",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
+  },
+  "devDependencies": {
+    "@types/geoip-lite": "^1.4.4"
   }
 }
