--- a/package.json
+++ b/package.json
@@ -81,9 +81,7 @@
     "tsconfig-paths": "^4.2.0",
     "typeorm": "^0.3.25",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
-  },
-  "devDependencies": {
+    "typescript-eslint": "^8.20.0",
     "@types/geoip-lite": "^1.4.4"
   }
 }
