chor: updated .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,40 @@
-NODE_ENV=
-PORT=
-BASE_URL=
-CLIENT_BASE_URL=
-GOOGLE_APPLICATION_CREDENTIALS=
-DB_HOST=
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_NAME=
-SMTP_HOST=
-SMTP_PORT=
-SMTP_USER=
-SMTP_PASS=
-JWT_SECRET=
-JWT_EXPIRES_IN=   
-AWS_S3_BUCKET_NAME=
-AWS_REGION=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-STRIPE_PUBLISHABLE_KEY=
-STRIPE_SECRET_KEY=
-PAYPAL_CLIENT_ID=
-PAYPAL_CLIENT_SECRET=
-PAYPAL_ENV=
+# Server Configuration
+PORT=                # Port number your Node.js app will run on (e.g., 3000)
+NODE_ENV=            # "development" | "production" | "test"
+BASE_URL=            # Backend API base URL (e.g., https://api.example.com)
+CLIENT_BASE_URL=     # Frontend URL (e.g., https://example.com)
+
+# Google Cloud (for Firebase/Cloud services, e.g., file storage, auth, etc.)
+GOOGLE_APPLICATION_CREDENTIALS=./credentials/wedding-app-google-application-credentials.json  # Path to the service account JSON file downloaded from Google Cloud Console
+
+# Database (PostgreSQL, MySQL, etc.)
+DB_HOST=             # Database host (e.g., localhost or AWS RDS endpoint)
+DB_PORT=             # Database port (default: 5432 for PostgreSQL, 3306 for MySQL)
+DB_USERNAME=         # Database username
+DB_PASSWORD=         # Database password
+DB_NAME=             # Database name
+
+# SMTP (Email service)
+SMTP_HOST=smtp.gmail.com   # SMTP server host (default Gmail SMTP is smtp.gmail.com)
+SMTP_PORT=587              # SMTP port (587 for TLS, 465 for SSL)
+SMTP_USER=                 # Your email address or app-specific email (e.g., Gmail/SendGrid user)
+SMTP_PASS=                 # App password or SMTP password (not your normal Gmail password; create from Google Account > Security > App Passwords)
+
+# JWT (Authentication)
+JWT_SECRET=          # A long random string (generate with openssl rand -base64 64 or online generator)
+JWT_EXPIRES_IN=      # Expiry duration (e.g., "1d", "7d", "1h")
+
+# AWS S3 (File storage)
+AWS_S3_BUCKET_NAME=  # Your S3 bucket name (from AWS S3 console)
+AWS_REGION=          # Your bucket’s AWS region (e.g., us-east-1)
+AWS_ACCESS_KEY_ID=   # AWS IAM user’s access key (from AWS IAM console)
+AWS_SECRET_ACCESS_KEY= # AWS IAM user’s secret key (paired with access key)
+
+# Stripe (Payments)
+STRIPE_PUBLISHABLE_KEY=  # Get from Stripe Dashboard > Developers > API keys (Publishable key)
+STRIPE_SECRET_KEY=       # Get from Stripe Dashboard > Developers > API keys (Secret key)
+
+# PayPal (Payments)
+PAYPAL_CLIENT_ID=        # Get from PayPal Developer Dashboard > My Apps & Credentials
+PAYPAL_CLIENT_SECRET=    # Get from PayPal Developer Dashboard > My Apps & Credentials
+PAYPAL_ENV=              # "sandbox" for testing, "live" for production
